--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "react-dom": "19.2.0",
     "react-icons": "^5.5.0",
     "react-toastify": "^11.0.5",
-    "swiper": "^12.0.3"
+    "swiper": "^12.0.3",
+    "toast": "^0.5.4",
+    "toastify": "^2.0.1"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
