--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "params": "^0.1.1",
     "react": "19.2.0",
     "react-dom": "19.2.0",
+    "react-icon": "^1.0.0",
     "react-icons": "^5.5.0",
     "react-toastify": "^11.0.5",
     "swiper": "^12.0.3",
