--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     "lint": "eslint"
   },
   "dependencies": {
-    "next": "16.0.1",
+    "next": "^16.1.6",
     "params": "^0.1.1",
-    "react": "19.2.0",
+    "react": "^19.2.4",
     "react-dom": "19.2.0",
     "react-icon": "^1.0.0",
     "react-icons": "^5.5.0",
